<resources>
    <string name="app_name">Skill Matrix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Employee Name</string>
    <string name="nav_header_subtitle">employee.name@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Profile</string>
    <string name="menu_gallery">My Reportees</string>
    <string name="menu_slideshow">Projects and Requirements</string>
    <string name="menu_notify_hr">HR Management</string>
    <string name="menu_scheduler">Scheduler</string>
    <string name="action_logout">Logout</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="new_user_register_here"><u>New User? Register Here</u></string>
    <string name="userid">UserId</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="full_name">full name</string>
    <string name="email">Email</string>
    <string name="enter_employeeid">Enter EmployeeId</string>
    <string name="first_name">Full Name</string>
    <string name="skill_matrix">SKILL MATRIX</string>
    <string name="registerText">Register</string>
    <string name="select_time">START TIME</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_end_time">END TIME</string>
    <!--    <string-array name="users_array">-->
    <!--        <item>Select User Role</item>-->
    <!--        <item>Manager</item>-->
    <!--        <item>Employee</item>-->
    <!--        <item>HR</item>-->
    <!--    </string-array>-->

</resources>